--- a/home/templates/home/mainPage.html
+++ b/home/templates/home/mainPage.html
@@ -2,12 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Title</title>
 </head>
-<body>
+<body style="padding-left: 20%; padding-right: 20%">
 <h3>Hello world!</h3>
-{% for i in cars %}
-    {{ i.model }}
-{% endfor %}
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+      {% for i in cars %}
+            <hr>
+            <h4>Модель: {{ i.model }}</h4>
+            <h4>Город: {{ i.city }}</h4>
+            <h4>Год: {{ i.year }}</h4>
+            <h4>Количество единиц: {{ i.count }}</h4>
+          <a href="/plus/{{ i.id }}"><button style="width: 40px; height: 40px"><img style="height: 20px; width: 20px;" src="../static/plus.png"></button></a>
+          <a href="/minus/{{ i.id }}"><button style="width: 40px; height: 40px"><img style="height: 20px; width: 20px;" src="../static/minus.png"></button></a>
+          <a href="/rem/{{ i.id }}"><button type="button" class="btn btn-danger">Удалить модель</button></a>
+      {% endfor %}
+    </div>
+    <div class="col-6">
+        <h4>Добавить новую модель</h4>
+      <form action="/add/" method="POST">
+          {% csrf_token %}
+      <div class="form-group">
+        <label for="exampleInputEmail1">Модель</label>
+        <input type="text" class="form-control" name="model" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Введите номер модели">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Город</label>
+        <input type="text" class="form-control" name="city" id="exampleInputPassword1" placeholder="Город, в котором стоит автомобиль">
+      </div>
+          <div class="form-group">
+        <label for="exampleInputPassword1">Год</label>
+        <input type="number" class="form-control" name="year" id="exampleInputPassword1" placeholder="Год выпуска">
+      </div>
+          <div class="form-group">
+        <label for="exampleInputPassword1">Количество единиц</label>
+        <input type="number" class="form-control" name="count" id="exampleInputPassword1" placeholder="Введите количество единиц модели">
+      </div>
+      <button type="submit" class="btn btn-primary">Добавить</button>
+    </form>
+    </div>
+  </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
