--- a/home/templates/home/sign.html
+++ b/home/templates/home/sign.html
@@ -7,19 +7,29 @@
 </head>
 <body style="padding-left: 20%; padding-right: 20%">
 
-<form action="" method="post">
+<form action="/query/" method="post">
     {% csrf_token %}
     {{ c }}
   <div class="form-group">
+      <h3>Заполните все поля для подачи заявки на регистрацию</h3>
     <label for="exampleInputEmail1">Email address</label>
     <input type="text" class="form-control" id="exampleInputEmail1" name="user" aria-describedby="emailHelp" placeholder="Enter email">
     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+    <div class="form-group">
+    <label for="exampleInputPassword1">Название</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" name="name" placeholder="Введите название фирмы">
+  </div>
+    <div class="form-group">
+    <label for="exampleInputPassword1">Номер телефона</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" name="tel" placeholder="+7(999)99-99">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Password</label>
     <input type="password" class="form-control" id="exampleInputPassword1" name="pass" placeholder="Password">
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+
+  <button type="submit" class="btn btn-primary">Отправить</button>
 </form>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
