adapive test fix

--- a/home/templates/home/log.html
+++ b/home/templates/home/log.html
@@ -15,7 +15,10 @@
   </form>
 </nav>
 <br>
-<div style="padding-left: 20%; padding-right: 20%;">
+<div >
+    <div class="container">
+  <div class="row">
+    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
     <form action="" method="post">
     {% csrf_token %}
 
@@ -30,6 +33,9 @@
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+</div>
+  </div>
+    </div>
 </div>
 
 
