--- a/home/templates/home/mainPage.html
+++ b/home/templates/home/mainPage.html
@@ -15,7 +15,7 @@
   </form>
 </nav>
 
-<div style="padding-left: 20%; padding-right: 20%;">
+<div>
        <br>
 <div class="container">
   <div class="row">
