--- a/home/templates/home/mainPage.html
+++ b/home/templates/home/mainPage.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" style="color: white">Название</a>
+  <a class="navbar-brand" href="/" style="color: white">Главная</a>
   <form class="form-inline">
-      <h3 style="color: white">Аккаунт</h3>
+      <h3 style="color: white">{{ user }}</h3>
       <a href="/sign"><button class="btn btn-outline-success my-2 my-sm-0" type="button">Регистрация</button></a>
       <a href="/out"><button class="btn btn-outline-danger my-2 my-sm-0" type="button">Выход</button></a>
   </form>
@@ -31,7 +31,7 @@
           <hr>
       {% endfor %}
     </div>
-    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+    <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-md-auto">
         <h4>Добавить новую модель</h4>
       <form action="/add/" method="POST">
           {% csrf_token %}
