--- a/home/templates/home/sign.html
+++ b/home/templates/home/sign.html
@@ -7,9 +7,8 @@
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" style="color: white">Название</a>
+  <a class="navbar-brand" href="/" style="color: white">Главная</a>
   <form class="form-inline">
-      <h3 style="color: white">Аккаунт</h3>
       <a href="/sign"><button class="btn btn-outline-success my-2 my-sm-0" type="button">Регистрация</button></a>
       <a href="/out"><button class="btn btn-outline-danger my-2 my-sm-0" type="button">Выход</button></a>
   </form>
