--- a/home/templates/home/mainPage.html
+++ b/home/templates/home/mainPage.html
@@ -19,7 +19,7 @@
        <br>
 <div class="container">
   <div class="row">
-    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+    <div class="col-auto">
       {% for i in cars %}
             <h4>Модель: {{ i.model }}</h4>
             <h4>Город: {{ i.city }}</h4>
@@ -31,7 +31,7 @@
           <hr>
       {% endfor %}
     </div>
-    <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-md-auto">
+    <div class="col-auto">
         <h4>Добавить новую модель</h4>
       <form action="/add/" method="POST">
           {% csrf_token %}
