--- a/home/templates/home/log.html
+++ b/home/templates/home/log.html
@@ -17,7 +17,7 @@
 <div >
     <div class="container">
   <div class="row">
-    <div class="col-auto">
+    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
     <form action="" method="post">
     {% csrf_token %}
 <h5 style="color: red">{{ message }}</h5>
