--- a/home/templates/home/log.html
+++ b/home/templates/home/log.html
@@ -18,7 +18,7 @@
     <div class="container">
   <div class="row">
     <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-    <form action="" method="post">
+    <form action="/log/" method="post">
     {% csrf_token %}
 <h5 style="color: red">{{ message }}</h5>
         <h5 style="color: green">{{ message2 }}</h5>
