--- a/home/templates/home/log.html
+++ b/home/templates/home/log.html
@@ -25,13 +25,13 @@
   <div class="form-group">
       <h3>Заполните все поля для входа в систему</h3>
     <label for="exampleInputEmail1">Адрес электронной почты</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" name="user" aria-describedby="emailHelp" placeholder="example@mail.ru">
+    <input type="email" class="form-control" id="exampleInputEmail1" name="user" aria-describedby="emailHelp" placeholder="example@mail.ru" required>
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Пароль</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" name="pass" placeholder="*********">
+    <input type="password" class="form-control" id="exampleInputPassword1" name="pass" placeholder="*********" required>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Войти</button>
 </form>
 </div>
   </div>
