--- a/home/templates/home/mainPage.html
+++ b/home/templates/home/mainPage.html
@@ -37,22 +37,22 @@
           {% csrf_token %}
       <div class="form-group">
         <label for="exampleInputEmail1">Модель</label>
-        <input type="text" class="form-control" name="model" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Введите номер модели">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <input type="text" class="form-control" name="model" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="6541-50-30" required>
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Город</label>
-        <input type="text" class="form-control" name="city" id="exampleInputPassword1" placeholder="Город, в котором стоит автомобиль">
+        <input type="text" class="form-control" name="city" id="exampleInputPassword1" placeholder="Санкт-Петербург" required>
       </div>
           <div class="form-group">
         <label for="exampleInputPassword1">Год</label>
-        <input type="number" class="form-control" name="year" id="exampleInputPassword1" placeholder="Год выпуска">
+        <input type="number" class="form-control" name="year" id="exampleInputPassword1" placeholder="2019" required>
       </div>
           <div class="form-group">
         <label for="exampleInputPassword1">Количество единиц</label>
-        <input type="number" class="form-control" name="count" id="exampleInputPassword1" placeholder="Введите количество единиц модели">
+        <input type="number" class="form-control" name="count" id="exampleInputPassword1" placeholder="4" required>
       </div>
       <button type="submit" class="btn btn-primary">Добавить</button>
+          <h6>* если при добавлении модель не появилась в списке, то Вы, вероятно, неверно заполнили некоторые поля</h6>
     </form>
     </div>
   </div>
