--- a/home/templates/home/sign.html
+++ b/home/templates/home/sign.html
@@ -32,7 +32,7 @@
   </div>
     <div class="form-group">
     <label for="exampleInputPassword1">Номер телефона</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" name="tel" placeholder="+7(999)99-99" required>
+    <input type="text" class="form-control" id="exampleInputPassword1" name="tel" placeholder="+7 (999) 999-99-99" required>
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Пароль</label>
