--- a/home/templates/home/log.html
+++ b/home/templates/home/log.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Title</title>
+    <title>Sklad</title>
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark">
@@ -17,7 +17,7 @@
 <div >
     <div class="container">
   <div class="row">
-    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+    <div class="col-6 col-sm-6 col-md-6 col-lg-6">
     <form action="/log/" method="post">
     {% csrf_token %}
 <h5 style="color: red">{{ message }}</h5>
@@ -34,6 +34,9 @@
   <button type="submit" class="btn btn-primary">Войти</button>
 </form>
 </div>
+      <div class="col-6 col-sm-6 col-md-6 col-lg-6">
+          <img src="../static/start.jpeg">
+      </div>
   </div>
     </div>
 </div>
