--- a/home/templates/home/log.html
+++ b/home/templates/home/log.html
@@ -35,7 +35,7 @@
 </form>
 </div>
       <div class="col-6 col-sm-6 col-md-6 col-lg-6">
-          <img src="../static/start.jpeg">
+          <img style="height: 427px; width: 240px" src="../static/start.jpeg">
       </div>
   </div>
     </div>
