--- a/home/templates/home/log.html
+++ b/home/templates/home/log.html
@@ -36,7 +36,7 @@
 </div>
       <div class="col-6 col-sm-6 col-md-6 col-lg-6">
           <img style="height: 640px; width: 360px" src="../static/start.jpeg">
-          <h2>telegram : t.me/sklad_kamaz_bot</h2>
+          <h2 style="color: blue">telegram : t.me/sklad_kamaz_bot</h2>
       </div>
   </div>
     </div>
