--- a/home/templates/home/mainPage.html
+++ b/home/templates/home/mainPage.html
@@ -53,6 +53,7 @@
       </div>
       <button type="submit" class="btn btn-primary">Добавить</button>
           <h6>* если при добавлении модель не появилась в списке, то Вы, вероятно, неверно заполнили некоторые поля</h6>
+          <h2 style="color: blue">telegram : t.me/sklad_kamaz_bot</h2>
     </form>
     </div>
   </div>
